# project

./: .gitignore  README.md  start_linux.sh  start_windows.bat  start_windows.ps1
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a2b3c4d5e6f7_add_token_split_fields.py  f103d417ba5a_create_initial_7_tables.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/middleware/: __init__.py  error_handler.py
backend/app/models/: __init__.py  artifact.py  message.py  provider.py  role_card.py  room.py  settings.py  shared_source.py
backend/app/routers/: __init__.py  artifacts.py  discussion.py  filesystem.py  providers.py  role_cards.py  rooms.py  settings.py  sources.py
backend/app/schemas/: __init__.py  artifact.py  discussion.py  message.py  provider.py  role_card.py  room.py  shared_source.py
backend/app/seed/: __init__.py  builtin_roles.json  loader.py
backend/app/services/: __init__.py  artifact_writer.py  context_builder.py  convergence_judge.py  crypto.py  discussion_log.py  discussion_runtime.py  file_ingestion.py  message_service.py  model_client.py  orchestrator.py  provider_service.py  role_card_service.py  room_service.py
backend/app/utils/: __init__.py  file_filter.py  logger.py  (+3 more)
backend/tests/: conftest.py  test_artifact_writer.py  test_artifacts_api.py  test_context_builder.py  test_convergence_judge.py  test_crypto.py  test_database.py  test_discussion.py  test_discussion_log.py  test_e2e.py  test_error_handler.py  test_file_ingestion.py  test_lifespan.py  test_logger.py  test_message_service.py  test_model_client.py  test_orchestrator.py  test_path_validator.py  test_provider_service.py  test_role_card_service.py  test_room_service.py  test_settings.py  test_sources_security.py  test_token_limits.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+81 files in other folders)
