[package]
name = "expert-room"
version = "0.1.0"
description = "AI Expert Team Collaboration Workbench"
authors = ["Expert Room Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
    "shell-sidecar",
    "shell-open",
    "dialog-all",
    "fs-all",
    "path-all",
    "window-all",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
